--- a/src/app/components/cursos/cursos.component.html
+++ b/src/app/components/cursos/cursos.component.html
@@ -5,7 +5,7 @@
             <div class="curso">
                 <div class="cursos-header">
                     <h3>{{ curso.nomCurso }}</h3>
-                    <button class="bnt-eliminar" (click)="eliminarCurso(curso)">X</button>
+                    <button class="eliminar" (click)="eliminarCurso(curso)">X</button>
                 </div>
                 <p>Profesor: {{ curso.nomProfesor }}</p>
                 <button class="bnt-descripcion">Ver más</button>
