--- a/src/app/components/cursos/cursos.component.css
+++ b/src/app/components/cursos/cursos.component.css
@@ -9,7 +9,7 @@ section {
 
 
 .curso {
-    background-color:white;
+    background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -21,9 +21,21 @@ section {
     text-align: center;
     display: inline-block;
     margin-right: 20px;
-    /*animation: aparecer 0.8s ease forwards;*/
+    animation: aparecer 0.8s ease forwards;
 }
 
+/*
+
+@keyframes aparecer {
+    from {
+        transform: translateZ(-100px);
+        opacity: 0;
+    }
+    to {
+        transform: translateZ(0);
+        opacity: 1;
+    }
+} */
 .curso:hover {
     transform: translateY(-5px);
 }
@@ -73,6 +85,7 @@ section {
     --hover: #cc4f4f;
 }
 
+
 .curso .eliminar {
     color: var(--color);
     -webkit-transition: 1s;
@@ -82,7 +95,7 @@ section {
 .curso .eliminar:hover,
 .curso .eliminar:focus {
     border-color: var(--hover);
-    color: red;
+    color: #fff;
 }
 
 
@@ -91,8 +104,13 @@ section {
     border: 1px solid;
     font: inherit;
     padding: 4px;
-    margin-top: -5rem;
+    border-radius:7px;
+    position: absolute; 
+    top: 10px; 
+    right: 10px; 
 }
+
+
 
 
 .detalles-curso {
