Logica de cursos (Debe actualizar el DOM)

--- a/src/app/components/new-curso/new-curso.component.html
+++ b/src/app/components/new-curso/new-curso.component.html
@@ -4,27 +4,28 @@
         <form id="nuevoCursoForm">
             <div class="form-group">
                 <label for="nombreCurso">Nombre del Curso</label>
-                <input type="text" id="nombreCurso" name="nombreCurso" required placeholder="Programación">
+                <input type="text" id="nombreCurso" name="nombreCurso" required placeholder="Programación" [(ngModel)]="nomCurso">
             </div>
             
             <div class="form-group">
                 <label for="nombreProfesor">Nombre del Profesor</label>
-                <input type="text" id="nombreProfesor" name="nombreProfesor" required placeholder="Jose Castro">
+                <input type="text" id="nombreProfesor" name="nombreProfesor" required placeholder="Jose Castro" [(ngModel)]="nomProfesor">
             </div>
             <div class="form-group">
                 <label for="fechaInicio">Fecha de Inicio</label>
-                <input type="date" id="fechaInicio" name="fechaInicio" required>
+                <input type="date" id="fechaInicio" name="fechaInicio" required [(ngModel)]="fechaInicio">
             </div>
   
             <div class="form-group">
                 <label for="fechaFin">Fecha de Fin</label>
-                <input type="date" id="fechaFin" name="fechaFin" required>
+                <input type="date" id="fechaFin" name="fechaFin" required [(ngModel)]="fechaFinal">
             </div>
             <div class="form-group" id="descripcionContainer">
                 <label for="descripcion">Descripción</label>
-                <textarea id="descripcion" name="descripcion" rows="4" required></textarea>
+                <textarea id="descripcion" name="descripcion" rows="4" required [(ngModel)]="descripcion"></textarea>
             </div>
-            <button type="submit" class="btn-submit" id="bnt-subir">Agregar Curso</button>
+            <button type="submit" class="btn-submit" id="bnt-subir" (click)="saveCursosLocalStorage(nomCurso, nomProfesor, fechaInicio, fechaFinal, descripcion) ">Agregar Curso</button>
+            
         </form>
     </div>
   </section>
