--- a/src/app/components/cursos/cursos.component.css
+++ b/src/app/components/cursos/cursos.component.css
@@ -104,12 +104,15 @@ section {
     border: 1px solid;
     font: inherit;
     padding: 4px;
-    border-radius:7px;
-    position: absolute; 
-    top: 10px; 
-    right: 10px; 
+    border-radius: 7px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 
+.mensaje-desaparecer {
+    transition: opacity 0.5s ease-in-out;
+}
 
 
 
