--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,3 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: #f2f2f2;
-  margin: 0%;
-  padding: 0%;
-}
 
 header {
   background-color: #4383d8;
@@ -11,12 +5,10 @@ header {
   text-align: center;
   padding: 2rem 0;
   width: auto;
+  display: block;
+  unicode-bidi: isolate;
 }
 
-p {
-  padding: 2rem;
-  justify-content: right;
-}
 
 @keyframes rotate3D {
   0% {
