Correcion de cursos.component.css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,52 +8,18 @@
             <li><a href="#contactos" class="ania"> Contactos</a></li>
         </ul>
     </nav>
+    <p id="ciudad">
+        Gracias por vistarnos desde {{ciudad}},{{pais}}
+         muy pronto nos pondremos en contacto con usted.
+    </p>
 </header>
 
 <app-inicio></app-inicio>
-
-
-
 
 <app-cursos></app-cursos>
 
 <app-new-curso></app-new-curso>
 
-
-
-
-<section class="cuerpo" id="contactos">
-    <h2 class="titulos">Contactos</h2>
-    <ul class="contact-list">
-        <li>
-            Correo electrónico: <a href="mailto:email@ups.edu.ec">email.edu.ec</a>
-        </li>
-        <li>
-            Número telefónico: <a href="tel:0912345678">0912345678</a>
-        </li>
-    </ul>
-
-    <h3>Nuestras redes sociales</h3>
-    <ul class="social-media">
-        <li>
-            <a href="//www.instagram.com" class="redes" id="insta">
-                <img src="insta.png" class="logoImagen" alt="Instagram">Instagram
-            </a>
-        </li>
-        <li>
-            <a href="//www.facebook.com" class="redes" id="facebook">
-                <img src="facebook.png" class="logoImagen" alt="Facebook">Facebook
-            </a>
-        </li>
-        <li>
-            <a href="//www.x.com" class="redes" id="x">
-                <img src="x.png" class="logoImagen" alt="Twitter">X
-            </a>
-        </li>
-    </ul>
-</section>
-
-
-
+<app-contactos></app-contactos>
 
 <router-outlet />
