--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,11 @@
             <li><a href="#contactos" class="ania"> Contactos</a></li>
         </ul>
     </nav>
-    <p id="ciudad">
-        Gracias por vistarnos desde {{ciudad}},{{pais}}
-         muy pronto nos pondremos en contacto con usted.
-    </p>
+    <div id="ciudad">
+        Gracias por vistarnos desde {{ciudad}},{{pais}} 
+        muy pronto nos pondremos en contacto con usted. 
+    </div>
+    
 </header>
 
 <app-inicio></app-inicio>
